@@ -289,9 +289,12 @@ constants.global_history_size = 30
 constants.gui_sizes = {
   en = {
     search_width = 276,
+    info_width = 430,
   },
+  -- TODO: Brazillian Portuguese
   ru = {
     search_width = 279,
+    info_width = 430,
   },
 }
 
