@@ -176,7 +176,16 @@ function actions.go_to_base_fluid(data)
 end
 
 function actions.toggle_quick_ref(data)
-  quick_ref_root.toggle(data.player, data.player_table, data.context.name)
+  local sizes = constants.gui_sizes[data.player_table.language] or constants.gui_sizes.en
+  local offset = sizes.info_width + (data.state.sticky and (sizes.search_width + 24) or 0)
+  offset = offset * data.player.display_scale
+  local location = data.refs.root.location
+  quick_ref_root.toggle(
+    data.player,
+    data.player_table,
+    data.context.name,
+    {location.x + offset, y = location.y}
+  )
 end
 
 function actions.toggle_favorite(data)
