@@ -3,6 +3,7 @@ Version: 3.1.5
 Date: ????
   Changes:
     - Added Brazillian Portuguese translation (by BM123499)
+    - Quick reference windows now open next to their parent window
   Bugfixes:
     - Fixed that dragging a quick reference window would reset its position for a frame
     - Fixed that settings wouldn't be preserved if they were falsey
